@@ -1,3 +1,9 @@
+2006-03-07  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* libs/gst/base/gstpushsrc.c: (gst_push_src_class_init),
+	(gst_push_src_check_get_range):
+	  Push sources don't support pull mode by default.
+
 2006-03-06  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* libs/gst/base/gstbasesrc.c: (gst_base_src_class_init),
